--- a/pam/Makefile.am
+++ b/pam/Makefile.am
@@ -8,9 +8,9 @@ AM_CFLAGS = -D_GNU_SOURCE -Wwrite-strings
 
 AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
 
-securelibdir = $(shell echo /`basename $(libdir)`/security)
+pam_security_libdir = @PAM_SECURITY@
 
-securelib_LTLIBRARIES = pam_snapper.la
+pam_security_lib_LTLIBRARIES = pam_snapper.la
 
 pam_snapper_la_LDFLAGS = -no-undefined -avoid-version -module
 pam_snapper_la_LIBADD = -lpam $(DBUS_LIBS)
