- look for most configuration files in /etc/snapper and /usr/share/snapper (bsc#1189601)

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -11,12 +11,14 @@ install-data-local:
 	install -D -m 644 snapper.logrotate $(DESTDIR)/etc/logrotate.d/snapper
 
 	install -d -m 755 $(DESTDIR)/etc/snapper/configs
-	install -D -m 644 default-config $(DESTDIR)/etc/snapper/config-templates/default
 
-	install -d -m 755 $(DESTDIR)/etc/snapper/filters
-	install -D -m 644 base.txt $(DESTDIR)/etc/snapper/filters/base.txt
-	install -D -m 644 lvm.txt $(DESTDIR)/etc/snapper/filters/lvm.txt
-	install -D -m 644 x11.txt $(DESTDIR)/etc/snapper/filters/x11.txt
+	install -d -m 755 $(DESTDIR)/usr/share/snapper/config-templates
+	install -D -m 644 default-config $(DESTDIR)/usr/share/snapper/config-templates/default
+
+	install -d -m 755 $(DESTDIR)/usr/share/snapper/filters
+	install -D -m 644 base.txt $(DESTDIR)/usr/share/snapper/filters/base.txt
+	install -D -m 644 lvm.txt $(DESTDIR)/usr/share/snapper/filters/lvm.txt
+	install -D -m 644 x11.txt $(DESTDIR)/usr/share/snapper/filters/x11.txt
 
 	install -D -m 644 org.opensuse.Snapper.conf $(DESTDIR)/usr/share/dbus-1/system.d/org.opensuse.Snapper.conf
 	install -D -m 644 org.opensuse.Snapper.service $(DESTDIR)/usr/share/dbus-1/system-services/org.opensuse.Snapper.service
@@ -32,5 +34,5 @@ if ENABLE_SYSTEMD
 endif
 
 if HAVE_ZYPP
-	install -D -m 644 zypp-plugin.conf $(DESTDIR)/etc/snapper/zypp-plugin.conf
+	install -D -m 644 zypp-plugin.conf $(DESTDIR)/usr/share/snapper/zypp-plugin.conf
 endif
