--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -226,10 +226,11 @@ This package contains libsnapper, a library for filesystem snapshot management.
 %{_libdir}/libsnapper.so.*
 %dir %{_sysconfdir}/snapper
 %dir %{_sysconfdir}/snapper/configs
-%dir %{_sysconfdir}/snapper/config-templates
-%config(noreplace) %{_sysconfdir}/snapper/config-templates/default
-%dir %{_sysconfdir}/snapper/filters
-%config(noreplace) %{_sysconfdir}/snapper/filters/*.txt
+%dir /usr/share/snapper
+%dir /usr/share/snapper/config-templates
+%config /usr/share/snapper/config-templates/default
+%dir /usr/share/snapper/filters
+%config /usr/share/snapper/filters/*.txt
 %doc %dir %{_defaultdocdir}/snapper
 %doc %{_defaultdocdir}/snapper/AUTHORS
 %doc %{_defaultdocdir}/snapper/COPYING
@@ -238,6 +239,18 @@ This package contains libsnapper, a library for filesystem snapshot management.
 %else
 %config(noreplace) %{_sysconfdir}/sysconfig/snapper
 %endif
+
+%pre -n libsnapper@LIBVERSION_MAJOR@
+# Migration from /etc/snapper to /usr/share/snapper
+for i in config-templates/default filters/base.txt filters/lvm.txt filters/x11.txt ; do
+    test -f /etc/snapper/${i}.rpmsave && mv -v /etc/snapper/${i}.rpmsave /etc/snapper/${i}.rpmsave.old ||:
+done
+
+%posttrans -n libsnapper@LIBVERSION_MAJOR@
+# Migration from /etc/snapper to /usr/share/snapper
+for i in config-templates/default filters/base.txt filters/lvm.txt filters/x11.txt ; do
+    test -f /etc/snapper/${i}.rpmsave && mv -v /etc/snapper/${i}.rpmsave /etc/snapper/${i} ||:
+done
 
 %post -n libsnapper@LIBVERSION_MAJOR@
 /sbin/ldconfig
@@ -288,7 +301,7 @@ snapper during commits.
 
 %files -n snapper-zypp-plugin
 %defattr(-,root,root)
-%config(noreplace) %{_sysconfdir}/snapper/zypp-plugin.conf
+%config /usr/share/snapper/zypp-plugin.conf
 %if 0%{?suse_version} < 1210
 %dir /usr/lib/zypp
 %dir /usr/lib/zypp/plugins
@@ -297,6 +310,18 @@ snapper during commits.
 /usr/lib/zypp/plugins/commit/snapper-zypp-plugin
 %doc %{_mandir}/*/snapper-zypp-plugin.8*
 %doc %{_mandir}/*/snapper-zypp-plugin.conf.5*
+
+%pre -n snapper-zypp-plugin
+# Migration from /etc/snapper to /usr/share/snapper
+for i in zypp-plugin.conf ; do
+    test -f /etc/snapper/${i}.rpmsave && mv -v /etc/snapper/${i}.rpmsave /etc/snapper/${i}.rpmsave.old ||:
+done
+
+%posttrans -n snapper-zypp-plugin
+# Migration from /etc/snapper to /usr/share/snapper
+for i in zypp-plugin.conf ; do
+    test -f /etc/snapper/${i}.rpmsave && mv -v /etc/snapper/${i}.rpmsave /etc/snapper/${i} ||:
+done
 
 %package -n pam_snapper
 Requires:       pam
