--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ snapper-$(VERSION).tar.bz2: dist-bzip2
 DEBIAN_FLAVOURS =	\
     Debian_9.0		\
     Debian_10.0		\
+    Debian_11.0		\
     Debian_Unstable
 
 UBUNTU_FLAVOURS =	\
