--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_19.10	\
     xUbuntu_20.04	\
     xUbuntu_20.10	\
-    xUbuntu_21.04
+    xUbuntu_21.04	\
+    xUbuntu_21.10
 
 RASPBIAN_FLAVOURS =	\
     Raspbian_10
