- packaging stuff for bash completion

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -207,6 +207,7 @@ fi
 %endif
 %{_datadir}/dbus-1/system.d/org.opensuse.Snapper.conf
 %{_datadir}/dbus-1/system-services/org.opensuse.Snapper.service
+%{_datadir}/bash-completion/completions/snapper
 
 %package -n libsnapper@LIBVERSION_MAJOR@
 Summary:        Library for filesystem snapshot management
