--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -81,7 +81,7 @@ BuildRequires:  docbook-xsl
 BuildRequires:  libdbus-1-devel
 BuildRequires:  xsltproc
 %endif
-%if (0%{?suse_version} && 0%{?suse_version} >= 1210)
+%if 0%{?suse_version}
 BuildRequires:  libzypp(plugin:commit)
 %endif
 BuildRequires:  pam-devel
@@ -303,11 +303,6 @@ snapper during commits.
 %files -n snapper-zypp-plugin
 %defattr(-,root,root)
 %{_datadir}/snapper/zypp-plugin.conf
-%if 0%{?suse_version} < 1210
-%dir /usr/lib/zypp
-%dir /usr/lib/zypp/plugins
-%dir /usr/lib/zypp/plugins/commit
-%endif
 /usr/lib/zypp/plugins/commit/snapper-zypp-plugin
 %doc %{_mandir}/*/snapper-zypp-plugin.8*
 %doc %{_mandir}/*/snapper-zypp-plugin.conf.5*
