--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -12,10 +12,10 @@ plugin_PROGRAMS = snapper-zypp-plugin
 AM_CPPFLAGS = $(DBUS_CFLAGS) $(XML2_CFLAGS) $(JSONC_CFLAGS)
 
 snapper_zypp_plugin_SOURCES = \
-	snapper_zypp_plugin.cc \
-	solvable_matcher.cc solvable_matcher.h \
-	zypp_commit_plugin.cc zypp_commit_plugin.h \
-	zypp_plugin.cc zypp_plugin.h
+	snapper-zypp-plugin.cc \
+	solvable-matcher.cc solvable-matcher.h \
+	zypp-commit-plugin.cc zypp-commit-plugin.h \
+	zypp-plugin.cc zypp-plugin.h
 
 snapper_zypp_plugin_LDADD = \
 	../client/libclient.la \
@@ -23,22 +23,22 @@ snapper_zypp_plugin_LDADD = \
 	../dbus/libdbus.la \
 	$(JSONC_LIBS)
 
-check_PROGRAMS = solvable_matcher.test forwarding-zypp-plugin
+check_PROGRAMS = solvable-matcher.test forwarding-zypp-plugin
 
 forwarding_zypp_plugin_SOURCES = \
-	forwarding_zypp_plugin.cc \
-	zypp_plugin.cc zypp_plugin.h
+	forwarding-zypp-plugin.cc \
+	zypp-plugin.cc zypp-plugin.h
 
 forwarding_zypp_plugin_LDADD = \
 	../snapper/libsnapper.la \
 	-lboost_system \
 	-lpthread
 
-TESTS = solvable_matcher.test
+TESTS = solvable-matcher.test
 
 solvable_matcher_test_SOURCES = \
-	solvable_matcher_test.cc \
-	solvable_matcher.cc solvable_matcher.h
+	solvable-matcher-test.cc \
+	solvable-matcher.cc solvable-matcher.h
 
 solvable_matcher_test_LDADD = \
 	../snapper/libsnapper.la \
