--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -98,7 +98,7 @@
       <para>Next to manual snapshot creation, snapshots are also created automatically.</para>
       <itemizedlist>
 	<listitem>
-	  <para>A cron-job creates hourly snapshots.</para>
+	  <para>A systemd timer creates hourly snapshots, if TIMELINE_CREATE is enabled for a config.</para>
 	</listitem>
 	<listitem>
 	  <para>Certain programs like YaST and zypper create pre/post
