--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -13,8 +13,9 @@ testdir = $(libdir)/snapper/testsuite
 test_DATA = CAUTION
 test_SCRIPTS = run-all setup-and-run-all
 
-test_PROGRAMS = simple1 permissions1 permissions2 permissions3 owner1 owner2 \
-	owner3 directory1 missing-directory1 error1 error2 error4 ug-tests
+test_PROGRAMS = simple1 permissions1 permissions2 permissions3 owner1 owner2	\
+	owner3 directory1 missing-directory1 error1 error2 error4 ug-tests	\
+	ascii-file
 
 if ENABLE_BTRFS
 test_PROGRAMS += test-btrfsutils
@@ -50,6 +51,8 @@ xattrs4_SOURCES = xattrs4.cc xattrs-utils.cc xattrs-utils.h common.h common.cc
 test_btrfsutils_SOURCES = test-btrfsutils.cc
 
 ug_tests_SOURCES = ug-tests.cc
+
+ascii_file_SOURCES = ascii-file.cc
 
 EXTRA_DIST = $(test_DATA) $(test_SCRIPTS)
 
